--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,449 @@
-.container {
-  padding: 0 2rem;
+.hero {
+  /* height: 90vh; */
+  margin-top: 30px;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.hero__left {
+  padding-bottom: 2.5rem;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.hero__wrapper {
+  padding-top: 0;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.hero__title {
+  font-size: 1.75rem !important;
+  line-height: 2.8125rem;
+  color: #1f2a36;
+  font-weight: 600;
+  margin-bottom: 1.25rem;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.hero__subtitle {
+  font-size: 1rem;
+  color: #46505c;
+  margin-bottom: 2.5rem;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.hero__image {
+  width: 100%;
+  height: 100%;
 }
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+.btn__started {
+  padding: 0.625rem 1.25rem;
+  background-color: #5e50a1;
+  color: #fff;
+  font-weight: 600;
+  font-size: 0.875rem;
 }
 
-.title,
-.description {
-  text-align: center;
+.btn__started:hover {
+  color: #5e50a1;
+  border: 1px solid #5e50a1;
+  background-color: #fff;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
+@media (min-width: 768px) {
+  .hero__left {
+    padding-right: 3.75rem;
+    padding-bottom: 0;
+  }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
+  .hero__wrapper {
+    padding-top: 4.375rem;
+  }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
+  .hero__title {
+    line-height: 4.375rem;
+    font-size: 2.8125rem !important;
+  }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
+  .hero__subtitle {
+    font-size: 1.25rem;
+  }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
+  .hero__image {
+    width: 500px;
+    height: 500px;
+  }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+  .btn__started {
+    font-size: 1rem;
+    padding: 0.9375rem 1.5625rem;
   }
 }
+
+.reason {
+  margin-top: 100px;
+  /* height: 80vh; */
+}
+
+.reason__image {
+  width: 100%;
+  height: 100%;
+}
+
+.reason_title {
+  font-size: 1.75rem !important;
+  font-weight: 600;
+  color: #1f2a36;
+  margin-bottom: 2.1875rem;
+  line-height: 2.8125rem;
+}
+
+.list {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.875rem;
+}
+
+.check {
+  width: 1.25rem;
+  height: 1.25rem;
+  background-color: #5e50a1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 1.25rem;
+}
+
+.text {
+  color: #46505c !important;
+  font-size: 0.875rem;
+}
+
+@media (min-width: 768px) {
+  .reason__image {
+    width: 500px;
+    height: 400px;
+  }
+
+  .reason__right {
+    padding-top: 1.875rem;
+  }
+
+  .reason_title {
+    font-size: 2.375rem !important;
+  }
+
+  .text {
+    font-size: 1rem;
+  }
+}
+
+.skill {
+  margin-bottom: 120px;
+}
+
+.skill__title {
+  font-size: 1.75rem !important;
+  color: #1f2a36;
+  font-weight: 600;
+  margin-bottom: 0.75rem;
+}
+
+.skill__subtitle {
+  color: #46505c;
+  font-size: 0.875rem;
+  margin-bottom: 1.875rem !important;
+}
+
+.skill__container {
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 1.25rem;
+  margin-bottom: 1.875rem;
+}
+
+.skill__list {
+  display: flex;
+  align-items: center;
+}
+
+.skill__check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1.25rem;
+  height: 1.25rem;
+  background-color: #fbb017;
+  margin-right: 1.25rem;
+}
+
+.skill__name {
+  color: #46505c !important;
+  font-size: 0.875rem;
+}
+
+.skill__image {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 0;
+}
+
+@media (min-width: 768px) {
+  .skill__wrapper {
+    padding-top: 4.375rem;
+  }
+
+  .skill__content {
+    padding-left: 6.875rem;
+  }
+  .skill__title {
+    font-size: 2.375rem !important;
+  }
+  .skill__subtitle {
+    font-size: 1.125rem;
+    margin-bottom: 0;
+  }
+
+  .skill__name {
+    font-size: 1rem;
+  }
+
+  .skill__image {
+    height: 400px;
+    width: 500px;
+  }
+}
+
+.testimonial {
+  background: #e2e5ed;
+  padding-bottom: 103px;
+}
+
+.testimonial_title {
+  font-size: 36px;
+  line-height: 56px;
+  padding-top: 80px;
+  padding-bottom: 52px;
+}
+
+.testimonial_card {
+  background-color: #fff;
+  padding: 26px 76px 36px 76px;
+  margin-right: 20px;
+  box-shadow: 0px 8px 16px rgba(197, 197, 197, 0.25);
+}
+
+.testimonial_card img {
+  border: 8px solid rgba(251, 176, 23, 0.37);
+  border-radius: 100%;
+}
+
+.testimonial_card h5 {
+  margin-top: 13px;
+  font-size: 30px;
+  line-height: 56px;
+}
+
+.testimonial_desc {
+  font-size: 18px;
+  line-height: 28px;
+}
+
+.subscribe {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.subscribe__card {
+  display: flex;
+  position: relative;
+  background-color: #5e50a1;
+  border-radius: 2.5rem 0.5rem;
+  height: 200px;
+}
+
+.subscribe__content {
+  display: flex;
+  justify-content: center;
+  flex-flow: column;
+  align-items: center;
+  width: 100%;
+}
+
+.btn__started_white {
+  background-color: #fff;
+  padding: 0.9rem 1.5rem;
+  font-weight: 600;
+  font-size: 1rem;
+  text-decoration: none;
+  color: #5e50a1;
+  z-index: 99;
+}
+
+.btn__started_white:hover {
+  cursor: pointer;
+  color: #fff;
+  border: 1px solid #fff;
+  background-color: #5e50a1;
+}
+
+.subscribe__text {
+  font-size: 1.25rem !important;
+  color: #fff;
+  line-height: 3.5rem;
+  margin-bottom: 1.25rem;
+}
+
+.subscribe__text span {
+  display: flex;
+  flex-direction: column;
+}
+
+.wave {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+@media (min-width: 768px) {
+  .subscribe__content {
+    padding: 0 4.375rem;
+    flex-flow: row;
+    justify-content: space-between;
+  }
+
+  .subscribe__text {
+    font-size: 2.375rem !important;
+    margin-bottom: 0;
+  }
+}
+
+/* .hero {
+  margin-top: 125px !important;
+  margin-bottom: 100px;
+}
+
+.hero_container h1 {
+  font-size: 44px;
+  line-height: 70px;
+  margin-bottom: 20px;
+}
+
+.hero_container p {
+  font-size: 18px;
+  line-height: 28px;
+  margin-bottom: 55px;
+}
+
+.hero_container button {
+  font-size: 16px;
+  line-height: 20px;
+  padding: 21px 24px;
+  background: #5e50a1 !important;
+}
+
+.hero_img img {
+  width: 617px;
+} */
+
+/* .suggestion {
+  margin-bottom: 100px;
+}
+
+.suggestion_image img {
+  width: 617px;
+}
+
+.suggestion_container h1 {
+  font-size: 36px;
+  line-height: 56px;
+  margin-bottom: 34px;
+}
+
+.skill_image img {
+  width: 617px;
+}
+
+.testimonial {
+  background: #e2e5ed;
+  padding-bottom: 103px;
+}
+
+.testimonial_title {
+  font-size: 36px;
+  line-height: 56px;
+  padding-top: 80px;
+  padding-bottom: 52px;
+}
+
+.testimonial_card {
+  background-color: #fff;
+  padding: 26px 76px 36px 76px;
+  margin-right: 20px;
+  box-shadow: 0px 8px 16px rgba(197, 197, 197, 0.25);
+}
+
+.testimonial_card img {
+  border: 8px solid rgba(251, 176, 23, 0.37);
+  border-radius: 100%;
+}
+
+.testimonial_card h5 {
+  margin-top: 13px;
+  font-size: 30px;
+  line-height: 56px;
+}
+
+.testimonial_desc {
+  font-size: 18px;
+  line-height: 28px;
+}
+
+.join {
+  padding: 129px 0px 120px 0px;
+}
+
+.join_bg {
+  background: #5e50a1;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 40px;
+  border-bottom-left-radius: 8px;
+  position: relative;
+}
+
+.join_svg {
+  border-bottom-right-radius: 40px;
+  border-bottom-left-radius: 8px;
+}
+
+.join_content {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  padding: 73px 68px;
+}
+
+.join_content p {
+  font-size: 36px;
+  line-height: 56px;
+  color: #fff;
+}
+
+.join_content button {
+  font-size: 16px;
+  line-height: 20px;
+  padding: 21px 24px;
+  background: #fff !important;
+  color: #796eaf;
+  height: 63px;
+}
+
+@media (max-width: 768px) {
+  .hero_img img {
+    width: 500px;
+  }
+
+  .suggestion_image img {
+    width: 500px;
+  }
+
+  .skill_image img {
+    width: 500px;
+  }
+} */
