--- a/styles/globals.css
+++ b/styles/globals.css
@@ -452,6 +452,12 @@ ul.navbar-nav .btn__action.signup {
 } */
 /* Footer End */
 
+.line {
+  position: absolute;
+  left: 0;
+  border-bottom: 2px solid #f2f3f4;
+}
+
 /* Not Found Start */
 #notfound {
   position: relative;
