--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
 @import url('bootstrap/dist/css/bootstrap.min.css');
 @import url('react-toastify/dist/ReactToastify.css');
+@import url('@fortawesome/fontawesome-free/css/all.min.css');
 @import '@fontsource/open-sans';
 
 :root {
@@ -26,25 +26,37 @@
   width: 100%;
 }
 
-.secondary-layout {
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
 /* Navbar Start */
-.header .navbar {
-  margin-top: -25px;
-  margin-bottom: -40px;
-  padding: 1.25rem 0;
+.navbar {
+  /* margin-top: -25px; */
+  /* margin-bottom: -40px; */
+  /* padding: -50px 0; */
 }
 
-.header .navbar-toggler {
+.navbar.navbar-shadow {
+  box-shadow: 0 10px 50px rgba(132, 132, 132, 0.25);
+  /* background-color: red; */
+  /* padding: 1rem 0; */
+  /* margin-bottom: -5px; */
+}
+
+.navbar-brand {
+  line-height: -100px;
+  margin-top: -40px;
+  margin-bottom: -40px;
+}
+
+.navbar-brand:hover {
+  cursor: pointer;
+}
+
+.navbar-toggler {
   padding: 0 !important;
   border: none;
   outline: none;
 }
 
-.header .navbar-toggler:focus {
+.navbar-toggler:focus {
   box-shadow: none;
 }
 
@@ -52,12 +64,12 @@ ul.navbar-nav {
   align-items: center;
   flex-flow: row;
   justify-content: space-around;
-  padding: 1.875rem 0;
+  /* padding: 1.875rem 0; */
 }
 
 ul.navbar-nav .btn__action {
   margin-top: -25px;
-  padding: 0.625rem 1.25rem;
+  /* padding: 0.625rem 1.25rem; */
   font-weight: bold;
   color: #5e50a1;
   letter-spacing: 1px;
@@ -79,252 +91,18 @@ ul.navbar-nav .btn__action.signup {
   }
 }
 
-.drop__nav {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  position: relative;
-  cursor: pointer;
-  margin-left: 30px;
-}
-
-.drop__nav:focus {
-  box-shadow: none;
-  outline: none;
-}
-
-.drop__nav .user__profile {
+.user__profile {
   width: 3.125rem;
   height: 3.125rem;
   margin-bottom: 0;
 }
 
-.drop__nav .dropdown {
-  position: absolute;
-  background-color: #fff;
-  border-radius: 4px;
-  min-width: max-content;
-  display: none;
-  right: 0;
-  z-index: 1;
-  top: 3.75rem;
-  padding-left: 0;
-}
-
-.drop__nav .dropdown li {
-  display: block;
-}
-
-.drop__nav .dropdown.clicked {
-  display: block;
-  box-shadow: -8px 8px 58px 0px rgba(0, 0, 0, 0.1);
-  margin-bottom: 0;
-}
-
-.drop__nav .dropdown .nav-item {
-  list-style: none;
-}
-
-.drop__nav .dropdown .nav-item .nav-link {
-  color: #9ea0a5;
-  padding: 1rem 1.25rem;
-}
-
-.arrow.clicked {
-  transform: rotate(180deg);
-  -webkit-transform: rotate(180deg);
-}
-
-.arrow.not-clicked {
-  transform: rotate(0deg);
-  -webkit-transform: rotate(0deg);
-}
-
-.input-text .input-group .form-control {
-  padding: 0.9375rem;
-  border-radius: 0.25rem;
-}
-
-.input-text .input-group .form-control::placeholder {
-  font-size: 0.875rem;
-  color: #858d96;
-}
-
-.input-text .input-group .form-control:focus {
-  box-shadow: none;
-}
-
-.input-text .input-group .input-group-text {
-  background-color: #fff;
-  height: 3.5rem;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-}
-/* .navbar {
-  padding: 1em 7em !important;
-  display: flex !important;
-  justify-content: space-between !important;
-  transition: all 0.5s ease;
-  text-decoration: none;
-}
-.navbar.navbar-shrink {
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
-}
-.navbar-logo {
-  width: 120px;
-}
-.navbar .navbar-brand {
-  font-size: 22px;
-  color: var(--text-gray);
-  font-weight: 600;
-  font-family: 'Poppins', 'sans-serif';
-  text-transform: capitalize;
-}
-.navbar .navbar-nav {
-  gap: 5px;
-}
-.navbar .nav-item {
-  margin-left: 0;
-}
-.navbar .nav-item:hover {
+.user__profile:hover {
   cursor: pointer;
 }
-.navbar .nav-item a {
-  text-decoration: none;
-}
-.navbar .nav-item .nav-link {
-  color: var(--text-gray);
-  text-transform: capitalize;
-  font-family: 'Poppins', 'sans-serif';
-  font-size: 16px;
-  font-weight: 500;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-.navbar .nav-item .nav-link::before {
-  content: '';
-  width: 40px;
-  height: 5px;
-  background-color: #2395ff;
-  position: absolute;
-  display: block;
-  margin: auto;
-  border-radius: 10px;
-  transition: all 0.4s ease;
-  top: 50px;
-  transform: scale(0);
-}
-.navbar .nav-item .nav-link:hover,
-.navbar .nav-item .nav-link.active,
-.navbar .nav-item .nav-link.active::before,
-.navbar .nav-item .nav-link:hover::before {
-  font-weight: 700;
-  transform: scale(1);
-}
-.navbar-search {
-  border-radius: 10px;
-  width: 250px;
-  display: flex;
-  align-items: center;
-  background-color: #efefef;
-  margin-right: 20px;
-}
-.navbar-search input {
-  font-family: 'Lato', 'sans-serif';
-  font-weight: 400;
-  font-size: 14px;
-  margin-left: 25px;
-}
-.navbar-icon-search {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-.navbar-icon-search img {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 7px;
-  margin: auto;
-}
-.navbar-profile {
-  display: flex;
-  width: 200px;
-  height: 27px;
-  justify-content: space-between;
-}
-.navbar-button {
-  background-color: var(--text-blue);
-  color: var(--text-white);
-  padding: 11px 13px;
-  border: none;
-  border-radius: 7px;
-  font-size: 16px;
-  font-weight: 700;
-  font-family: 'Poppins', sans-serif;
-  text-transform: capitalize;
-  transition: all 0.5 ease;
-  font-weight: 500;
-  text-decoration: none;
-  width: 130px;
-  text-align: center;
-}
-.navbar-button:hover {
-  box-shadow: 0px 8px 10px rgba(35, 149, 255, 0.3);
-}
-.navbar-photo img {
-  width: 45px;
-  height: 45px;
-  margin-top: -10px;
-  border: 2px solid #2395ff;
-  border-radius: 25px;
-  overflow: hidden;
-  padding: 3px;
-} */
-
-/* @media screen and (max-width: 992px) {
-  .navbar {
-    margin-top: -10px;
-  }
-  .navbar-toggler {
-    background-color: none;
-    padding: 0;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    margin-right: 15px;
-  }
-  .navbar .navbar-brand {
-    margin-right: auto;
-  }
-  .navbar .nav-item .nav-link::before {
-    top: 35px;
-  }
-}
-@media screen and (max-width: 576px) {
-  .navbar-search {
-    width: 100%;
-    margin: 10px 0;
-  }
-  .navbar-button {
-    display: block;
-    margin: 0 auto;
-    margin-top: 10px;
-  }
-  .navbar-profile {
-    width: 100%;
-    margin-top: 10px;
-    gap: 50px;
-    justify-content: center;
-  }
-} */
 /* Navbar End */
 
 /* Footer Start */
-
 .footer__container {
   background-color: #5e50a1;
   /* padding-top: 3.125rem; */
@@ -401,48 +179,33 @@ ul.navbar-nav .btn__action.signup {
     font-size: 1.125rem;
   }
 }
-
-/* .footer-start {
-  padding: 3em 7em 1em !important;
-  background-color: #5e50a1;
-}
-
-.footer-start p {
-  color: #ffffff;
-}
-
-.footer-logo {
-  width: 250px;
-  padding-bottom: 30px;
-}
-
-.footer-start hr {
-  background-color: #ffffff !important;
-  height: 2px !important;
-}
-
-.footer-item {
-  display: inline-flex;
-  justify-content: space-between;
-}
-
-.footer-end {
-  display: flex !important;
-}
-
-.footer-right-phone {
-  padding-right: 50px;
-}
-
-.footer-right {
-  display: flex;
-} */
 /* Footer End */
 
 .line {
   position: absolute;
   left: 0;
   border-bottom: 2px solid #f2f3f4;
+}
+
+.input-text .input-group .form-control {
+  padding: 0.9375rem;
+  border-radius: 0.25rem;
+}
+
+.input-text .input-group .form-control::placeholder {
+  font-size: 0.875rem;
+  color: #858d96;
+}
+
+.input-text .input-group .form-control:focus {
+  box-shadow: none;
+}
+
+.input-text .input-group .input-group-text {
+  background-color: #fff;
+  height: 3.5rem;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 /* Not Found Start */
@@ -561,7 +324,7 @@ ul.navbar-nav .btn__action.signup {
 }
 /* Not Found End */
 
-.pagination .page-item {
+/* .pagination .page-item {
   margin-right: 0.5rem;
 }
 
@@ -574,9 +337,240 @@ ul.navbar-nav .btn__action.signup {
   padding: 15px;
   padding: 7px 15px;
   border-radius: 0.25rem;
-}
+} */
 
 .purple {
   height: 300px;
   position: absolute;
+}
+
+/* Social Media Start */
+.sosmed__vector {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  padding-top: 15px;
+}
+.sosmed__vector a {
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--text-silver);
+}
+.sosmed__vector a:hover {
+  text-decoration: underline;
+}
+/* Social Media End */
+
+/* Nav Tabs Start */
+.nav-tabs {
+  border: none;
+  display: flex;
+  gap: 20px;
+}
+.nav-tabs .nav-link {
+  color: var(--text-silver);
+  font-size: 20px;
+  font-weight: 600;
+  border: 0;
+}
+.nav-tabs .nav-link:hover {
+  cursor: pointer;
+  border: 0;
+}
+.nav-tabs .nav-link.active {
+  border: 0;
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--text-black);
+  border-bottom: 4px solid var(--text-purple);
+  border-radius: 0;
+}
+/* Nav Tabs End */
+
+/* Portofolio Start */
+.portofolio__content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.portofolio__content img {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.portofolio__content p {
+  font-size: 14px;
+  font-weight: 400;
+  margin-top: 10px;
+  line-height: 24px;
+  color: var(--text-black);
+}
+
+.portofolio__action {
+  position: absolute;
+  top: 10px;
+  right: 5px;
+}
+
+.portofolio__action-delete {
+  background-color: var(--text-orange);
+  color: var(--text-white);
+  padding: 5px 7px;
+  border-radius: 5px;
+  margin-right: 5px;
+  border: 0;
+}
+
+.portofolio__action-delete:hover {
+  background-color: var(--text-white);
+  color: var(--text-orange);
+  border: 1px solid var(--text-orange);
+}
+
+.experience__action {
+  position: absolute;
+  top: 0;
+  right: -5px;
+}
+/* Portofolio End */
+
+/* Work Experience Start */
+.work__image {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.work__image img {
+  width: 150px;
+  height: auto;
+}
+
+.work__content h2 {
+  font-size: 20px;
+  line-height: 20px;
+  font-weight: 600;
+  color: var(--text-black);
+}
+
+.work__content h5 {
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: 400;
+  color: var(--text-gray);
+}
+
+.work__content h6 {
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--text-silver);
+  line-height: 20px;
+}
+
+.work__content p {
+  color: var(--text-black);
+  font-size: 14px;
+  font-weight: 400;
+  margin-top: 25px;
+}
+
+/* Pagination Start */
+.homepage__pagination {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.homepage__pagination-previous {
+  background-color: #ffffff;
+  padding: 12px 20px;
+  border: 1px solid #e2e5ed;
+  border-radius: 4px;
+  margin: 0px 10px 0px 0px;
+}
+
+.home__pagination-active {
+  background-color: #5e50a1;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 12px 20px;
+  border: 1px solid #e2e5ed;
+  border-radius: 4px;
+  margin: 0px 10px 0px 0px;
+}
+
+.homepage__pagination-next {
+  background-color: #ffffff;
+  padding: 12px 20px;
+  border: 1px solid #e2e5ed;
+  border-radius: 4px;
+  margin: 0px 10px 0px 0px;
+}
+
+.radio__container {
+  display: flex;
+  gap: 25px;
+}
+
+.radio__content {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.radio__content li {
+  float: left;
+  margin: 0 5px 0 0;
+  width: 165px;
+  height: 50px;
+  position: relative;
+}
+
+.radio__content label,
+.radio__content input {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 0;
+  border-radius: 7px;
+  background-color: #f0f0f0;
+  background-repeat: no-repeat;
+}
+
+.radio__content label {
+  text-align: center;
+  line-height: 35px;
+}
+
+.radio__content input[type='radio'] {
+  opacity: 0.01;
+  z-index: 100;
+}
+
+.radio__content input[type='radio']:checked + label,
+.Checked + label {
+  background: var(--text-purple);
+  color: var(--text-white);
+}
+
+.radio__content label {
+  padding: 5px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  z-index: 90;
+}
+
+.radio__content label:hover {
+  background: #ddd;
 }
