--- a/styles/Auth.module.css
+++ b/styles/Auth.module.css
@@ -1,6 +1,6 @@
 .login,
-.reg__recruiter,
-.reg__worker {
+.reg_recruiter,
+.reg_worker {
   position: relative;
   background-color: #eaeaea;
   max-width: 100%;
@@ -8,59 +8,25 @@
   margin-bottom: 0;
 }
 
-/* .bgImage {
-  object-fit: cover;
-  position: relative;
-}
-
-.bgImage::after {
-  content: '';
-  background-color: rgba(94, 80, 161, 0.7);
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 600px;
-  width: 600px;
-}
-
-.image {
-  position: absolute;
-  margin-top: -20px;
-  display: none;
-}
-
-.relative {
-  position: fixed;
-}
-
-.logo {
-  position: absolute !important;
-  top: 40px;
-  left: 40px;
-  z-index: 10;
-} */
-
-.forgot__password {
+.forgot_password {
   width: max-content;
   margin-top: 15px;
   margin-left: auto;
   margin-bottom: 1.875rem;
 }
 
-.forgot__password a {
+.forgot_password a {
   color: var(--text-black);
   text-decoration: none;
   font-weight: 400;
   font-size: 16px;
 }
 
-.forgot__password a:hover {
+.forgot_password a:hover {
   text-decoration: underline;
 }
 
-.btn__auth {
+.btn_auth {
   background-color: var(--text-orange);
   width: 100%;
   padding-top: 0.625rem;
@@ -74,13 +40,13 @@
   font-size: 16px;
 }
 
-.btn__auth:hover {
+.btn_auth:hover {
   background-color: var(--text-white);
   color: var(--text-orange);
   border: 1px solid var(--text-orange);
 }
 
-.btn__option {
+.btn_option {
   width: 100%;
   color: var(--text-white);
   font-weight: 600;
@@ -92,7 +58,7 @@
   background-color: var(--text-purple);
 }
 
-.btn__option:hover {
+.btn_option:hover {
   background-color: var(--text-white);
   color: var(--text-purple);
   border: 1px solid var(--text-purple);
@@ -117,86 +83,25 @@
 
 @media (min-width: 768px) {
   .login,
-  .reg__recruiter,
-  .reg__worker {
+  .reg_recruiter,
+  .reg_worker {
     padding: 2.5rem 4.675rem 4.0625rem;
   }
-  .btn__auth {
+  .btn_auth {
     font-size: 1rem;
     padding-top: 0.9375rem;
     padding-bottom: 0.9375rem;
   }
 }
 
-/* Banner Start */
-/* .banner {
-  position: relative;
-} */
-
-.banner__overlay {
-  background-color: var(--text-purple);
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  opacity: 0.85;
-  z-index: 99;
-}
-
-.banner__content {
-  padding: 2.8125rem;
-  height: 100%;
-}
-
-.brand__logo {
-  width: 150px;
-}
-
-.banner__text {
-  position: absolute;
-  top: 50%;
-  left: 51%;
-  transform: translate(-50%, -50%);
-  width: 80%;
-}
-
-.banner__heading {
-  font-size: 44px;
-  font-weight: 700;
-  line-height: 70px;
-  color: var(--text-white);
-}
-
-.left__wave {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-}
-
-.right__wave {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.banner__background {
-  width: 100%;
-  position: absolute;
-  /* z-index: -1; */
-}
-/* Banner End */
-
-/* Right Side Start */
-.right__title {
+.right_title {
   color: var(--text-black);
   font-size: 32px;
   font-weight: 600;
   font-size: 2rem !important;
 }
 
-.right__subtitle {
+.right_subtitle {
   color: var(--text-gray);
   font-size: 18px;
   font-weight: 400;
@@ -207,44 +112,18 @@
   .right {
     padding: 6.25rem 0 0 3.125rem;
   }
-  .right__title {
+  .right_title {
     font-size: 2.375rem !important;
   }
-  .right__subtitle {
+  .right_subtitle {
     font-size: 1.125rem;
   }
 }
-/* Right Side End */
 
-/* Form Start */
-.form__input {
-  margin-bottom: 1.25rem;
-}
-
-.form__input:last-of-type {
-  margin-bottom: 1.875rem;
-}
-
-.form__input label {
-  font-size: 13px;
-  color: var(--text-silver);
-}
-
-@media (min-width: 768px) {
-  .form__input {
-    margin-bottom: 1.875rem;
-  }
-  .form__input:last-of-type {
-    margin-bottom: 2.5rem;
-  }
-}
-/* Form End */
-
-/* Make it Better */
 @media screen and (max-width: 576px) {
   .login,
-  .reg__recruiter,
-  .reg__worker {
+  .reg_recruiter,
+  .reg_worker {
     background-color: var(--text-white);
     display: flex;
     align-items: center;
@@ -255,11 +134,11 @@
     height: 100vh;
   }
 
-  .reg__recruiter {
+  .reg_recruiter {
     height: 170vh;
   }
 
-  .reg__worker {
+  .reg_worker {
     height: 150vh;
   }
 }
