--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -14,6 +14,7 @@
 .navbar-brand {
   width: 15%;
   height: 15%;
+  margin-right: 50px;
 }
 
 .navbar-brand:hover {
@@ -35,7 +36,7 @@
   font-size: 18px;
   color: var(--text-black);
   position: relative;
-  margin-left: 50px;
+  margin-left: 20px;
 }
 
 .navbar .nav-item .nav-link::before {
