--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -98,6 +98,23 @@
   }
 }
 
+.card__empty {
+  box-shadow: 0px 1px 20px rgba(197, 197, 197, 0.25);
+  background-color: var(--text-white);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 70px 0;
+}
+
+.card__empty h2 {
+  margin-top: -90px;
+  margin-bottom: 140px;
+  font-weight: 700;
+}
+
 .card__container {
   position: relative;
   box-shadow: 0px 1px 20px rgba(197, 197, 197, 0.25);
