--- a/styles/Chat.module.css
+++ b/styles/Chat.module.css
@@ -88,6 +88,7 @@
   background-color: var(--text-purple);
   border-radius: 50%;
   width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
