--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -138,7 +138,7 @@
   position: relative;
   margin-top: 100px;
   border-radius: 8px;
-  /* width: 55vw; */
+  width: 54.1vw;
   padding-left: 30px;
   padding-right: 30px;
   padding-top: 30px;
@@ -450,3 +450,12 @@
     padding: 100px 0;
   }
 } */
+
+@media screen and (max-width: 576px) {
+  .profile__user {
+    margin-right: 0;
+  }
+  .profile__tab {
+    width: 100vw;
+  }
+}
